testsuite/tests/polykinds/T22743.stderr

T22743.hs:10:1: error: [GHC-52083]
    The binder ‘x’
    cannot be assigned a fixed runtime representation, not even by defaulting.
    Suggested fix: Add a type signature.

T22743.hs:10:1: error: [GHC-52083]
    The binder ‘x’
    cannot be assigned a fixed runtime representation, not even by defaulting.
    Suggested fix: Add a type signature.
